[Documentation] added inline comments in the workbench

--- a/workbenches/workbench-perf.css
+++ b/workbenches/workbench-perf.css
@@ -75,7 +75,7 @@ rate {
     bottom: 11px;
 }
 rate:before {
-    content: 'heart rate: '
+    content: 'rate: '
 }
 tags {
     position: absolute;
